cmake_minimum_required(VERSION 3.13)
project(coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(coding
        #Flatten.cpp
        #View.cpp
        #BinaryCode.cpp
        #GCD_LCM.cpp
        #queue.cpp
        #hash.cpp
        #hash_STL.cpp
        #programmers_level1/exam.cpp
        #programmers_level1/Kth_number.cpp
        #programmers_level1/TrainingSuit.cpp
        #programmers_level1/Middle_Letter.cpp
        #programmers_level1/calender.cpp
        #programmers_level1/OverlapNumber.cpp
        #programmers_level1/DividingNumbers.cpp
        #programmers_level1/Sum.cpp
        #programmers_level1/String_Range.cpp
        #programmers_level1/PYnum.cpp
        #programmers_level1/Descending.cpp
        #programmers_level1/PrimeNumber.cpp
        #programmers_level1/WM.cpp
        #programmers_level1/Casesar'sPassword.cpp
        #programmers_level1/StrangeCharacter.cpp
        #programmers_level1/DescendingNumber.cpp
        programmers_level1/SecretMap.cpp programmers_level1/FailureRate.cpp programmers_level1/DartGame.cpp programmers_level2/FunctionDevelop.cpp programmers_level2/SkillTree.cpp programmers_level2/Country124.cpp programmers_level2/tower.cpp programmers_level2/StockPrice.cpp)