cmake_minimum_required(VERSION 3.13)
project(coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(coding
        #Flatten.cpp
        #View.cpp
        #BinaryCode.cpp
        #GCD_LCM.cpp
        #queue.cpp
        #hash.cpp
        #hash_STL.cpp
        #programmers_level1/exam.cpp
        #programmers_level1/Kth_number.cpp
        #programmers_level1/TrainingSuit.cpp
        #programmers_level1/Middle_Letter.cpp
        #programmers_level1/calender.cpp
        #programmers_level1/OverlapNumber.cpp
        #programmers_level1/DividingNumbers.cpp
        #programmers_level1/Sum.cpp
        #programmers_level1/String_Range.cpp
        #programmers_level1/PYnum.cpp
        #programmers_level1/Descending.cpp
        #programmers_level1/PrimeNumber.cpp
        #programmers_level1/WM.cpp
        #programmers_level1/Casesar'sPassword.cpp
        #programmers_level1/StrangeCharacter.cpp
        #programmers_level1/DescendingNumber.cpp
        #programmers_level1/SecretMap.cpp
        #programmers_level1/FailureRate.cpp
        #programmers_level1/DartGame.cpp
        #programmers_level2/FunctionDevelop.cpp
        #programmers_level2/SkillTree.cpp
        #programmers_level2/Country124.cpp
        #programmers_level2/tower.cpp
        #programmers_level2/StockPrice.cpp
        #programmers_level2/Truck.cpp
        #programmers_level2/IronBar.cpp
        #programmers_level2/NormalSquare.cpp
        #programmers_level2/Printer.cpp
        #programmers_level2/StringCompression.cpp
        #programmers_level2/ColoringBook.cpp
        #BruteForse.cpp
        #programmers_level2/Joystick.cpp
        #GreedyExample.cpp
        #programmers_level2/Spicier.cpp
#        maestroTEST/1.cpp
        #maestroTEST/2.cpp
        #maestroTEST/3.cpp
        #maestroTEST/4.cpp
        #maestroTEST/5.cpp
#        test.cpp
#        baekjoon/10992.cpp
#        baekjoon/10991.cpp
#        baekjoon/2522.cpp
#        baekjoon/10818.cpp
#        baekjoon/1463.cpp
#        baekjoon/DP/11726.cpp
#        baekjoon/DP/11727.cpp
#        baekjoon/DP/9095.cpp
#        baekjoon/DP/10844.cpp
#        baekjoon/DP/11057.cpp
#        baekjoon/DP/2193.cpp
#        baekjoon/DP/9465.cpp
#        baekjoon/DP/2156.cpp
#        baekjoon/DP/11053.cpp
#        baekjoon/DP/11055.cpp
#        baekjoon/DP/11722.cpp
#        baekjoon/DP/11054.cpp
#        baekjoon/DP/1912.cpp
#        baekjoon/DP/2579.cpp
#        baekjoon/DP/1699.cpp
#        baekjoon/DP/2133.cpp
#        baekjoon/DP/9461.cpp
#        baekjoon/DP/2225.cpp
#        baekjoon/DP/2011.cpp
#        baekjoon/DP/11052.cpp
#        baekjoon/else/2751.cpp
#        baekjoon/else/11650.cpp
#        baekjoon/else/11651.cpp
#        baekjoon/else/10814.cpp
#        baekjoon/else/10825.cpp
#        baekjoon/else/10989.cpp
        baekjoon/else/11652.cpp)