cmake_minimum_required(VERSION 3.13)
project(PS)

set(CMAKE_CXX_STANDARD 14)

add_executable(coding
        #Flatten.cpp
        #View.cpp
        #BinaryCode.cpp
        #GCD_LCM.cpp
        #queue.cpp
        #hash.cpp
        #hash_STL.cpp
        #programmers_level1/exam.cpp
        #programmers_level1/Kth_number.cpp
        #programmers_level1/TrainingSuit.cpp
        #programmers_level1/Middle_Letter.cpp
        #programmers_level1/calender.cpp
        #programmers_level1/OverlapNumber.cpp
        #programmers_level1/DividingNumbers.cpp
        #programmers_level1/Sum.cpp
        #programmers_level1/String_Range.cpp
        #programmers_level1/PYnum.cpp
        #programmers_level1/Descending.cpp
        #programmers_level1/PrimeNumber.cpp
        #programmers_level1/WM.cpp
        #programmers_level1/Casesar'sPassword.cpp
        #programmers_level1/StrangeCharacter.cpp
        #programmers_level1/DescendingNumber.cpp
        #programmers_level1/SecretMap.cpp
        #programmers_level1/FailureRate.cpp
        #programmers_level1/DartGame.cpp
        #programmers_level2/FunctionDevelop.cpp
        #programmers_level2/SkillTree.cpp
        #programmers_level2/Country124.cpp
        #programmers_level2/tower.cpp
        #programmers_level2/StockPrice.cpp
        #programmers_level2/Truck.cpp
        #programmers_level2/IronBar.cpp
        #programmers_level2/NormalSquare.cpp
        #programmers_level2/Printer.cpp
        #programmers_level2/StringCompression.cpp
        #programmers_level2/ColoringBook.cpp
        #BruteForse.cpp
        #programmers_level2/Joystick.cpp
        #GreedyExample.cpp
        #programmers_level2/Spicier.cpp
#        test.cpp
#        baekjoon/10992.cpp
#        baekjoon/10991.cpp
#        baekjoon/2522.cpp
#        baekjoon/10818.cpp
#        baekjoon/1463.cpp
#        baekjoon/DP/11726.cpp
#        baekjoon/DP/11727.cpp
#        baekjoon/DP/9095.cpp
#        baekjoon/DP/10844.cpp
#        baekjoon/DP/11057.cpp
#        baekjoon/DP/2193.cpp
#        baekjoon/DP/9465.cpp
#        baekjoon/DP/2156.cpp
#        baekjoon/DP/11053.cpp
#        baekjoon/DP/11055.cpp
#        baekjoon/DP/11722.cpp
#        baekjoon/DP/11054.cpp
#        baekjoon/DP/1912.cpp
#        baekjoon/DP/2579.cpp
#        baekjoon/DP/1699.cpp
#        baekjoon/DP/2133.cpp
#        baekjoon/DP/9461.cpp
#        baekjoon/DP/2225.cpp
#        baekjoon/DP/2011.cpp
#        baekjoon/DP/11052.cpp
#        baekjoon/else/2751.cpp
#        baekjoon/else/11650.cpp
#        baekjoon/else/11651.cpp
#        baekjoon/else/10814.cpp
#        baekjoon/else/10825.cpp
#        baekjoon/else/10989.cpp
#        baekjoon/else/11652.cpp
#        baekjoon/else/11004.cpp
#        baekjoon/else/10828.cpp
#        baekjoon/else/9012.cpp
#        baekjoon/else/10799.cpp
#        baekjoon/else/10845.cpp
#        baekjoon/else/10866.cpp
#        baekjoon/else/10808.cpp
#        baekjoon/else/10809.cpp
#        baekjoon/else/10820.cpp
#        baekjoon/else/2743.cpp
#        baekjoon/else/11655.cpp
#        baekjoon/else/10824.cpp
#        baekjoon/else/11656.cpp
#        baekjoon/else/1406.cpp
#        baekjoon/else/1168.cpp
#        baekjoon/else/10430.cpp
#        baekjoon/else/2609.cpp
#        baekjoon/else/1934.cpp
#        baekjoon/else/1850.cpp
#        baekjoon/else/9613.cpp
#        baekjoon/else/11005.cpp
#        baekjoon/else/2745.cpp
#        baekjoon/else/1373.cpp
#        baekjoon/else/1212.cpp
#        baekjoon/else/2089.cpp
#        baekjoon/else/11576.cpp
#        baekjoon/else/1978.cpp
#        baekjoon/else/1929.cpp
#        baekjoon/else/6588.cpp
#        baekjoon/else/11653.cpp
#        baekjoon/else/10872.cpp
#        baekjoon/else/1676.cpp
#        baekjoon/else/2004.cpp
#        baekjoon/graph/1260.cpp
#        baekjoon/graph/11724.cpp
#        baekjoon/graph/1701.cpp
#        baekjoon/graph/10451.cpp
#        baekjoon/graph/2331.cpp
#        baekjoon/graph/9466.cpp
#        baekjoon/graph/2667.cpp
#        baekjoon/graph/4963.cpp
#        baekjoon/graph/7576.cpp
#        baekjoon/graph/2178.cpp
#        baekjoon/graph/2146.cpp
#        baekjoon/graph/1991.cpp
#        baekjoon/graph/11725.cpp
#        baekjoon/graph/1167.cpp
#        baekjoon/graph/1967.cpp
#        baekjoon/search/1654.cpp
#        baekjoon/search/2805.cpp
#        baekjoon/search/2110.cpp
#        baekjoon/search/10815.cpp
#        baekjoon/search/10816.cpp
#        baekjoon/search/11662.cpp
#        baekjoon/DivideandConquer/11728.cpp
#        baekjoon/DivideandConquer/1780.cpp
#        baekjoon/DivideandConquer/11729.cpp
#        baekjoon/DivideandConquer/1992.cpp
#        baekjoon/DivideandConquer/2447.cpp
#        baekjoon/DivideandConquer/2448.cpp
#        baekjoon/greedy/11047.cpp
#        baekjoon/greedy/2875.cpp
#        baekjoon/greedy/10610.cpp
#        baekjoon/greedy/1783.cpp
#        baekjoon/ExhaustiveSearch/1476.cpp
#        baekjoon/greedy/1931.cpp
#        baekjoon/greedy/11399.cpp
#        baekjoon/greedy/2873.cpp
        baekjoon/greedy/1744.cpp)
